--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,14 +26,21 @@
             android:layout_height="wrap_content"
             android:text="Load" />
 
-        <TextView
-            android:id="@+id/timeTextView"
-            android:layout_width="0dp"
+        <Button
+            android:id="@+id/fullLoadButton"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="0" />
+            android:text="Full Load" />
 
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/timeTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.01"
+        android:text="0" />
 
     <WebView
         android:id="@+id/webView"
