--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#43464A</color>
+    <color name="colorPrimaryDark">#43464A</color>
+    <color name="colorAccent">#6699FF</color>
+    <color name="colorBackground">#2E3136</color>
+    <color name="colorPrimaryText">#F8F9FA</color>
 </resources>
